--- a/api-reference/core-testing-api/test-structure.mdx
+++ b/api-reference/core-testing-api/test-structure.mdx
@@ -1,264 +1,202 @@
 ---
-title: "Test Structure and Execution"
-description: "Reference on creating and organizing tests. Covers the macros for test case and suite definitions, lifecycle methods, test fixtures, and main entry point patterns. Includes links to configuration options and test environment setup for different platforms."
+title: "Test Structure & Lifecycle"
+description: "Outlines the structure of a GoogleTest test and the lifecycle of test cases. Explains how to define test functions, use fixtures, and control the execution flow, including setup and teardown logic. Targeted at users new to GoogleTest or those building robust test suites."
 ---
 
-# Test Structure and Execution
+# Test Structure & Lifecycle
 
-This reference page guides you through creating and organizing tests using GoogleTest, focusing on the macros for test case and suite definitions, lifecycle methods, test fixtures, and main entry point patterns. It serves as your go-to manual for structuring robust test suites and managing test execution sequences effectively.
+GoogleTest provides a clear and structured framework to organize and run your C++ tests efficiently. Understanding the anatomy of a test and the lifecycle of test execution is essential for building robust, maintainable test suites. This page introduces the fundamental constructs that define your tests, how to write them, and how GoogleTest manages their execution, including setup and teardown flows.
 
 ---
 
-## Overview
+## 1. Anatomy of a GoogleTest
 
-GoogleTest leverages an xUnit-style architecture designed to help you define, organize, and run your tests with clarity and flexibility. This page covers:
+A GoogleTest test is composed of individual *test functions*, typically organized into *test suites* (formerly known as test cases). GoogleTest uses macros to define these tests, and provides mechanisms to share common code using *test fixtures*.
 
-- The primary macros for defining test cases and test suites
-- Lifecycle hooks to set up and tear down test environments
-- Usage of test fixtures for shared context
-- Best practices for structuring and executing tests
-- Patterns for main entry points and platform-specific setup
+### Basic Test Definition
 
-Understanding these components will empower you to write maintainable tests and execute them efficiently across different platforms and configurations.
-
-## Test Case and Test Suite Macros
-
-GoogleTest provides handy macros that are the first step in defining tests:
-
-### TEST Macro
-
-Use the `TEST(TestSuiteName, TestName)` macro to define a test function:
+The simplest test can be defined using the `TEST` macro:
 
 ```cpp
-TEST(MathTests, AdditionWorks) {
-  EXPECT_EQ(2 + 2, 4);
+#include <gtest/gtest.h>
+
+TEST(MathTest, Factorial) {
+  EXPECT_EQ(Factorial(0), 1);
+  EXPECT_EQ(Factorial(5), 120);
 }
 ```
 
-- **Purpose**: Defines a single test function.
-- **Scope**: Each `TEST` defines an independent test without shared setup.
-- **Use case**: Simple, isolated checks without common context.
+- **Test Suite name**: `MathTest` groups related tests.
+- **Test name**: `Factorial` describes this individual test.
 
-### TEST_F Macro
+This test consists of assertion statements (`EXPECT_EQ`) to verify behavior.
 
-Use `TEST_F(TestFixtureName, TestName)` to write a test that uses a test fixture:
+---
+
+## 2. Test Fixtures: Reusing Setup and Teardown Code
+
+When multiple tests require common setup code, you define a *test fixture* — a class inheriting from `testing::Test`:
 
 ```cpp
-class CalculatorTest : public ::testing::Test {
+class QueueTest : public ::testing::Test {
  protected:
   void SetUp() override {
-    calc.Reset();
-  }
-
-  Calculator calc;
-};
-
-TEST_F(CalculatorTest, MultiplicationWorks) {
-  EXPECT_EQ(calc.Multiply(3, 5), 15);
-}
-```
-
-- **Purpose**: Use fixtures for sharing setup and teardown code among related tests.
-- **Scope**: All tests in the suite share the fixture's context and state.
-- **Use case**: When multiple tests require common setup and cleanup.
-
-### TEST_P and INSTANTIATE_TEST_SUITE_P (Parameterized Tests)
-
-For advanced scenarios, GoogleTest supports parameterized tests where the same test logic is run repeatedly with different data.
-
-```cpp
-class PrimeTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(PrimeTest, IsPrime) {
-  int n = GetParam();
-  EXPECT_TRUE(IsPrime(n));
-}
-
-INSTANTIATE_TEST_SUITE_P(PrimeTests, PrimeTest, ::testing::Values(2, 3, 5, 7));
-```
-
-- **Purpose**: Run tests with varying input sets.
-- **Use case**: Testing code against a range of inputs efficiently.
-
-## Test Fixture Lifecycle Methods
-
-Test fixtures allow common setup and teardown logic for groups of tests. Key lifecycle methods include:
-
-### SetUp() and TearDown()
-
-- Called before and after *each* test in a test suite.
-
-```cpp
-class FooTest : public ::testing::Test {
-protected:
-  void SetUp() override {
-    // Code here runs before every test
+    // Code here is invoked before each test runs.
+    q_.Enqueue(42);
   }
 
   void TearDown() override {
-    // Code here runs after every test
+    // Code here is invoked after each test finishes.
   }
+
+  Queue<int> q_;
 };
-```
 
-- Use these for allocating and releasing per-test resources.
+TEST_F(QueueTest, IsInitiallyNotEmpty) {
+  EXPECT_FALSE(q_.IsEmpty());
+}
 
-### SetUpTestSuite() and TearDownTestSuite()
-
-- Static methods run once per test suite: before the first test and after the last test.
-
-```cpp
-class FooTest : public ::testing::Test {
-public:
-  static void SetUpTestSuite() {
-    // Runs once before all tests
-  }
-
-  static void TearDownTestSuite() {
-    // Runs once after all tests
-  }
-};
-```
-
-- Ideal for expensive global setup like database connections or large test data initializations.
-
-## Organizing Tests with Fixtures
-
-Test fixtures encapsulate the shared context for a group of tests:
-
-- Define a class deriving from `::testing::Test`.
-- Put shared data members and helper functions in this class.
-- Implement the setup and teardown overrides as needed.
-- Write test methods using `TEST_F` with this fixture.
-
-**Benefits:**
-- Avoids duplication
-- Ensures consistent preparation and cleanup
-- Encapsulates shared logic concisely
-
-## Main Entry Point Patterns
-
-GoogleTest provides a built-in `main()` function that initializes the framework and runs tests.
-
-### Using `gtest_main`
-
-- When linking against the `gtest_main` library, you get a default `main()` implementation.
-- Most users need only call `RUN_ALL_TESTS()` inside the built-in `main`.
-
-### Writing a Custom Main
-
-For more control (e.g., custom initialization or platform-specific handling):
-
-```cpp
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-
-  // Custom setup here
-
-  return RUN_ALL_TESTS();
+TEST_F(QueueTest, CanDequeue) {
+  int* n = q_.Dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 42);
+  delete n;
 }
 ```
 
-- Use this to integrate with special environments or add custom CLI flags.
+- `TEST_F` associates tests with the fixture.
+- Each test gets a fresh fixture instance.
+- Setup and teardown allow shared resource management.
 
-## Test Fixtures with Parameters
+---
 
-Use parameterized test fixtures when tests naturally vary over some data:
+## 3. GoogleTest Test Case Lifecycle
 
-- Derive from `::testing::TestWithParam<Type>`.
-- Use `GetParam()` in tests to access current parameter.
-- Instantiate sets with `INSTANTIATE_TEST_SUITE_P` macro.
+GoogleTest manages each test's lifecycle around your source code, ensuring isolation and repeatability.
 
-## Links to Configuration and Platforms
+### Lifecycle Phases
 
-For details on:
+1. **Construction**: Creates a fresh fixture instance.
+2. **SetUp()**: Called before each test; prepare your environment here.
+3. **Test Execution**: Runs the code inside the `TEST` or `TEST_F` macro.
+4. **TearDown()**: Called after the test completes; clean up resources here.
+5. **Destruction**: The fixture instance is destroyed.
 
-- Test environment setup
-- Platform-specific configurations
-- Build and integration options
+Each individual test gets this full lifecycle, ensuring that tests are independent of each other.
 
-Please refer to [Test Configuration and Environment Setup](/api-reference/core-testing-api/test-configuration) and [Prerequisites & Supported Platforms](/getting_started/essentials_setup/prerequisites).
+---
 
-## Best Practices
+## 4. Writing Test Functions
 
-- **Start simple**: Use `TEST` macros for isolated tests.
-- **Leverage fixtures**: Transition to `TEST_F` for related tests sharing context.
-- **Use parameterized tests** to avoid duplication over similar test logic.
-- **Proper lifecycle management**: Use `SetUpTestSuite` for expensive global setup.
-- **Avoid brittle tests** by isolating expectations and limiting reliance on order unless required.
+### 4.1 Naming Conventions
 
-## Troubleshooting Common Pain Points
+- Use descriptive names for test suites to group related functionality.
+- Use descriptive names for individual tests reflecting the scenario tested.
+- Avoid underscores or special characters in names for compatibility.
 
-- Ensure all tests set up expectations before exercising mock calls.
-- Use proper teardown to avoid side effects polluting subsequent tests.
-- Understand the distinction between global suite setup vs per-test setup to prevent leaks or wrong assumptions.
-- When writing `TEST_F`, make sure your fixture constructor does not throw and is lightweight.
+### 4.2 Assertions
 
-## Summary Diagram of Test Lifecycle
+GoogleTest provides various assertions to check test conditions:
 
-```mermaid
-sequenceDiagram
-  participant User as Test User
-  participant GoogleTest as Framework
-  User->>GoogleTest: Defines TEST / TEST_F
-  loop Per Test Suite
-    GoogleTest->>TestFixture: Calls SetUpTestSuite()
-    loop Per Test
-      GoogleTest->>TestFixture: Calls SetUp()
-      GoogleTest->>Test: Runs Test Body
-      GoogleTest->>TestFixture: Calls TearDown()
-    end
-    GoogleTest->>TestFixture: Calls TearDownTestSuite()
-  end
-  GoogleTest->>User: Reports Test Results
+- `EXPECT_*` assertions report a non-fatal failure (test continues).
+- `ASSERT_*` assertions report a fatal failure (test aborts).
+
+Examples:
+```cpp
+EXPECT_EQ(foo, bar);       // Check equaliy and continue on failure.
+ASSERT_NE(ptr, nullptr);   // Check non-null before dereferencing.
 ```
 
-This flow highlights the main setup and teardown points where users can inject initialization and cleanup code for robust testing.
+Use `ASSERT_*` when subsequent test code depends on a condition.
+
+### 4.3 Multiple Assertions
+
+Within a test, multiple `EXPECT_*` assertions can help identify multiple failures in one go, improving debugging efficiency.
+
+---
+
+## 5. Controlling Test Execution Flow
+
+### Setup and Teardown Patterns
+
+- Use constructor and destructor for lightweight, non-failing setup.
+- Use `SetUp()` and `TearDown()` for operations that can fail or require exception handling.
+
+### Test Parameters and Parameterized Tests
+
+For scenarios where the same logic should be tested over multiple input values, GoogleTest offers parameterized tests (covered in other guides).
+
+---
+
+## 6. Test Suites and Isolation
+
+- Each test belongs to a suite (group) by its suite name.
+- Tests within the same suite should be independent.
+- Fixtures isolate test dependencies and state.
+
+GoogleTest runs tests in isolation, enabling you to run individual tests or entire suites.
+
+---
+
+## 7. Practical Tips and Best Practices
+
+- **Start simple**: Write isolated tests first, expand to fixtures as duplication arises.
+- **Keep state local**: Avoid sharing state between tests; use fixtures.
+- **Use assertions wisely**: Prefer non-fatal assertions where possible.
+- **Name clearly**: Make test and suite names descriptive.
+
+<Tip>
+Remember to define virtual destructors for your classes used in tests and fixtures to avoid resource leaks.
+</Tip>
+
+<Tip>
+Write setup and teardown logic that is fast and side-effect free to keep tests performant and predictable.
+</Tip>
+
+---
+
+## 8. Troubleshooting Common Pitfalls
+
+- Forgetting to define or overriding `SetUp()`/`TearDown()` with wrong signatures causes tests not to run setup.
+- Using `ASSERT_*` unnecessarily can abort tests prematurely.
+- Sharing mutable state between tests leads to flaky and non-repeatable tests.
+- Not isolating tests causes order dependencies and hidden bugs.
+
+---
+
+## 9. Summary
+
+GoogleTest's test structure and lifecycle enforce best practices for reliable, maintainable tests. By leveraging `TEST` and `TEST_F` macros, alongside consistent use of setup and teardown, you can build powerful test suites with clear execution flows.
+
+For deeper testing strategies including parameterized tests, fixtures inheritance, and advanced lifecycle control, explore related guides.
+
+---
 
 ## See Also
 
-- [Assertions and Expectations](/api-reference/core-testing-api/assertions)
-- [Test Configuration and Environment Setup](/api-reference/core-testing-api/test-configuration)
-- [Structuring Test Suites Guide](/guides/getting-started/structuring-test-suites)
-- [Running Tests and Interpreting Results Guide](/guides/getting-started/running-tests-and-interpreting-results)
+- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) for advanced mocking and fixture usage.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) for foundational concepts.
+- [Mock Objects and Methods](../mock-objects-and-methods.md) for dependency mocking within tests.
+- [Writing and Running Your First Test](https://google.github.io/googletest/guides/getting-started/writing-your-first-test.html) for practical test authoring.
+
 
 ---
 
-## References
+### Request-Response Flow Diagram of Test Execution
 
-- GoogleTest Primer: Introduction and quickstart
-- GoogleMock Reference: For advanced mocking and interaction
-- Platform Setup: Instructions for platform-specific environment setup
+```mermaid
+sequenceDiagram
+  participant Tester
+  participant GoogleTestRunner
+  participant TestFixture
 
----
+  Tester->>GoogleTestRunner: Trigger test suite execution
+  GoogleTestRunner->>TestFixture: Create new fixture instance
+  TestFixture->>TestFixture: Call SetUp()
+  GoogleTestRunner->>TestFixture: Run test body
+  TestFixture->>TestFixture: Call TearDown()
+  GoogleTestRunner->>TestFixture: Destroy fixture instance
+  GoogleTestRunner->>Tester: Report test result
+```
 
-## Practical Tip
-
-When defining test suites, name the suite clearly to reflect feature areas or modules. Combine small related cases into fixtures for readability and manageability. Use lifecycle hooks strategically to minimize overhead and maximize test isolation.
-
-For platform-specific setup, place shared initialization in `SetUpTestSuite()`, and local changes within `SetUp()`.
-
-<Check>
-Always define virtual destructors in classes used as test fixtures to avoid undefined behavior.
-</Check>
-
-<Warning>
-Avoid mutable global states in tests; they can cause flaky or order-dependent failures.
-</Warning>
-
-<Info>
-Explore [Mocking with GoogleMock](/guides/advanced-testing/mocking-with-googlemock) to extend your tests with powerful mock object capabilities.
-</Info>
-
----
-
-<Callout title="Next Steps">
-- Begin by writing your first test using the `TEST` macro.
-- Learn to organize tests into suites with `TEST_F`.
-- Dive into parameterized tests for versatile test coverage.
-- Set up your test environment per platform requirements.
-</Callout>
-
----
-
-<Source url="https://github.com/google/googletest" paths='[{"path": "googletest/include/gtest/gtest.h", "range": "lines 200-250"}, {"path": "googletest/include/gtest/gtest-test-part.h", "range": "lines 100-130"}]' />
+This illustrates the controlled lifecycle around each test execution to ensure isolation and correctness.
