--- a/api-reference/core-testing-api/assertions-api.mdx
+++ b/api-reference/core-testing-api/assertions-api.mdx
@@ -1,390 +1,228 @@
 ---
-title: "Assertions and Predicates"
-description: "Reference for all built-in assertions provided by GoogleTest, including equality, inequality, exception, floating-point, and predicate assertions. Details assertion macros, result handling (fatal vs. non-fatal), and guides users on defining custom assertions for greater flexibility."
+title: "Assertions API"
+description: "Comprehensive guide to all built-in GoogleTest assertions, including equality, floating point, string, and exception assertions. Describes fatal vs. non-fatal failures, custom assertion authoring, and usage with code examples to help users verify program correctness at every point."
 ---
 
-# Assertions and Predicates Reference
+# Assertions API
 
-This documentation provides a comprehensive reference to all built-in assertions available in GoogleTest. These assertions help you verify your C++ code behavior effectively, covering equality, inequality, exceptions, floating-point comparisons, predicate assertions, and more.
-
----
-
-## Overview of Assertions
-
-GoogleTest assertions come in pairs: `EXPECT_` macros produce non-fatal failures that allow test execution to continue, while `ASSERT_` macros produce fatal failures and abort the current test function immediately. You can append custom failure messages to any assertion using streaming with `<<`.
-
-Assertions evaluate their arguments exactly once and provide rich failure reporting, including values and contextual information.
+Comprehensive guide to all built-in GoogleTest assertions, including equality, floating point, string, and exception assertions. Describes fatal vs. non-fatal failures, custom assertion authoring, and usage with code examples to help users verify program correctness at every point.
 
 ---
 
-## Explicit Success and Failure
+## Overview of GoogleTest Assertions
 
-### `SUCCEED()`
+GoogleTest provides a rich set of assertion macros for verifying your program's correctness at every point of execution. These assertions form the backbone of writing reliable, readable, and maintainable tests. They range from simple boolean checks to complex predicate assertions that improve test expressiveness and diagnostic clarity.
 
-Generate an explicit success. Useful for documenting that a particular code path was reached. Does not affect test outcome by itself.
+Assertions come in pairs:
 
+- **EXPECT_***: Generate non-fatal failures allowing tests to continue and report multiple failures.
+- **ASSERT_***: Generate fatal failures that abort the current function immediately.
+
+Use `EXPECT_*` when you want your test to continue after failure and `ASSERT_*` when continuation is unsafe or meaningless.
+
+
+## Types of Assertions
+
+### 1. Boolean Conditions
+
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`: Verifies that the condition is true.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`: Verifies that the condition is false.
+
+
+### 2. Equality and Relational Assertions
+
+For comparing values, including pointers and primitive types. GoogleTest prints actual and expected values for easier debugging.
+
+- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)`: Checks if `val1 == val2`.
+- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)`: Checks if `val1 != val2`.
+- `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)`: Checks if `val1 < val2`.
+- `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)`: Checks if `val1 <= val2`.
+- `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)`: Checks if `val1 > val2`.
+- `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)`: Checks if `val1 >= val2`.
+
+
+### 3. String Assertions
+
+Designed specifically for comparing C strings and wide strings. They check string content, not pointer equality.
+
+- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)`: Verifies string equality.
+- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)`: Verifies string inequality.
+- `EXPECT_STRCASEEQ(str1, str2)` / `ASSERT_STRCASEEQ(str1, str2)`: Case-insensitive equality.
+- `EXPECT_STRCASENE(str1, str2)` / `ASSERT_STRCASENE(str1, str2)`: Case-insensitive inequality.
+
+**Example:**
 ```cpp
-SUCCEED();
-SUCCEED() << "Step completed successfully.";
+EXPECT_STREQ("hello", foo.getString()) << "The string did not match";
 ```
 
-### `FAIL()`
 
-Generate a fatal failure causing the current function to return immediately.
+### 4. Floating-Point Comparisons
 
+These handle the imprecision inherent in floating-point computations, comparing two values within a tolerance or ULP (units in the last place) range.
+
+- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)`: `float` comparison within 4 ULPs.
+- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)`: `double` comparison within 4 ULPs.
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)`: Checks that the absolute difference is within `abs_error`.
+
+**Example:**
 ```cpp
-if (value == 0) {
-  FAIL() << "Value must not be zero.";
+EXPECT_NEAR(calculatePiEstimate(), 3.14159, 0.0001);
+```
+
+
+### 5. Predicate Assertions
+
+When complex verification is needed beyond simple comparisons, predicate assertions allow writing custom logic with clear failure messages.
+
+- `EXPECT_PRED1(pred, val)` / `ASSERT_PRED1(pred, val)`
+- `EXPECT_PRED2(pred, val1, val2)` / `ASSERT_PRED2(pred, val1, val2)`
+- ... up to 5 parameters.
+
+They accept boolean predicates or functors.
+
+Furthermore, predicate formatter variants allow detailed custom failure messages:
+
+- `EXPECT_PRED_FORMAT1(pred_formatter, val)` / `ASSERT_PRED_FORMAT1(pred_formatter, val)`
+- ... up to 5 parameters.
+
+**Example predicate function using AssertionResult:**
+```cpp
+testing::AssertionResult IsEven(int n) {
+  if ((n % 2) == 0)
+    return testing::AssertionSuccess();
+  else
+    return testing::AssertionFailure() << n << " is odd";
 }
 ```
 
-### `ADD_FAILURE()`
+**Usage:**
+```cpp
+EXPECT_PRED1(IsEven, value);
+```
 
-Generate a non-fatal failure allowing test continuation.
+
+### 6. Exception Assertions
+
+Check for expected exceptions thrown by code snippets, helps ensure robustness.
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(statement, exception_type)`
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)`
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)`
+
+
+### 7. Explicit Success and Failure
+
+For indicating unconditional success or failure:
+
+- `SUCCEED()`: Records an explicit success.
+- `FAIL()`: Generates a fatal failure and aborts the current function.
+- `ADD_FAILURE()`: Non-fatal failure.
+
+
+### 8. Generalized Assertions (Matchers)
+
+Use GoogleMock's generalized matcher-based assertions for expressive checks:
+
+- `EXPECT_THAT(value, matcher)` / `ASSERT_THAT(value, matcher)`
+
+Match values against matchers like `HasSubstr()`, `Contains()`, `StartsWith()`, `MatchesRegex()`, and custom matchers.
+
+**Example:**
+```cpp
+EXPECT_THAT(my_string, StartsWith("Hello"));
+EXPECT_THAT(numbers, ElementsAre(1, 2, _, 4));
+```
+
+
+## Fatal vs. Non-fatal Failures
+
+- **Fatal failure** (from `ASSERT_*`): Aborts the current function, useful when further execution might cause undefined behavior.
+- **Non-fatal failure** (from `EXPECT_*`): Records failure but allows the current function to continue for more checks.
+
+Choose `ASSERT_*` for critical preconditions and `EXPECT_*` for softer checks.
+
+
+## Streaming Custom Messages
+
+You can add debugging context by streaming a custom message after the assertion macro:
 
 ```cpp
-if (x < 0) {
-  ADD_FAILURE() << "Negative values are not allowed.";
+EXPECT_EQ(value, expected) << "Failure at index " << i;
+```
+
+GoogleTest will append this message to the assertion failure output.
+
+
+## Best Practices and Tips
+
+- Use `EXPECT_*` unless you must abort the test early.
+- Compare floating point with `EXPECT_FLOAT_EQ` or `EXPECT_NEAR` instead of `EXPECT_EQ`.
+- Use `EXPECT_STREQ` when comparing C strings, not `EXPECT_EQ`.
+- Use predicate or matcher assertions to improve failure diagnostics for complex conditions.
+- Use `SCOPED_TRACE` to add contextual information in deeply nested test logic, making failures easier to trace.
+- For exception testing, verify the exact exception type and message where appropriate.
+
+
+## Common Pitfalls
+
+- Don't use `ASSERT_*` in functions returning non-void; fatal assertions can only be used in void-returning functions.
+- When testing private code, use `FRIEND_TEST` or test public interfaces.
+- Avoid overly strict expectations with too many `EXPECT_CALL`s (in mocking) unless explicitly verifying call counts or orders.
+- Remember that `EXPECT_EQ` on pointers compares addresses, not pointed-to contents.
+
+
+## Sample Code Examples
+
+### Equality Assertion Example
+```cpp
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(3), 6) << "Factorial of 3 should be 6";
 }
 ```
 
-### `ADD_FAILURE_AT(file, line)`
-
-Generate a non-fatal failure at a specific file and line.
-
----
-
-## Boolean Condition Assertions
-
-Verify conditions that evaluate to true or false.
-
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
-
-Example:
-
+### Floating-Point Assertion Example
 ```cpp
-EXPECT_TRUE(IsValid(input)) << "Input is invalid.";
-ASSERT_FALSE(has_error) << "Unexpected error occurred.";
-```
-
-For better failure diagnostics with predicates, see the Predicate Assertions section.
-
----
-
-## Binary Comparison Assertions
-
-Compare two values using relational operators and print detailed failure messages.
-All arguments must be comparable by the operator used.
-
-| Macro           | Description                |
-|-----------------|----------------------------|
-| `EXPECT_EQ(a,b)` / `ASSERT_EQ(a,b)` | `a == b` |
-| `EXPECT_NE(a,b)` / `ASSERT_NE(a,b)` | `a != b` |
-| `EXPECT_LT(a,b)` / `ASSERT_LT(a,b)` | `a < b`  |
-| `EXPECT_LE(a,b)` / `ASSERT_LE(a,b)` | `a <= b` |
-| `EXPECT_GT(a,b)` / `ASSERT_GT(a,b)` | `a > b`  |
-| `EXPECT_GE(a,b)` / `ASSERT_GE(a,b)` | `a >= b` |
-
-Notes:
-- Pointer arguments perform pointer equality for `EQ`/`NE`.
-- For C strings, use string comparison assertions instead.
-
-Example:
-
-```cpp
-EXPECT_EQ(Size(), expected_size) << "Size mismatch.";
-ASSERT_LT(value, max_value) << "Value exceeded maximum.";
-```
-
----
-
-## String Comparison Assertions
-
-Compare C-style strings or wide strings by content, not pointer.
-
-| Macro               | Description                                    |
-|---------------------|------------------------------------------------|
-| `EXPECT_STREQ(a,b)` / `ASSERT_STREQ(a,b)` | C strings equal                          |
-| `EXPECT_STRNE(a,b)` / `ASSERT_STRNE(a,b)` | C strings not equal                      |
-| `EXPECT_STRCASEEQ(a,b)` / `ASSERT_STRCASEEQ(a,b)` | C strings equal, ignoring case   |
-| `EXPECT_STRCASENE(a,b)` / `ASSERT_STRCASENE(a,b)` | C strings not equal, ignoring case |
-
-Example:
-
-```cpp
-EXPECT_STREQ(GetName(), "default") << "Name is incorrect.";
-ASSERT_STRCASEEQ(user_input, "YES") << "Input should be YES or yes.";
-```
-
-Wide strings (`wchar_t*`) are supported equivalently and printed as UTF-8.
-
----
-
-## Floating-Point Comparison Assertions
-
-Because floating-point equality is tricky due to rounding, GoogleTest supports approximate comparisons:
-
-### `EXPECT_FLOAT_EQ(a,b)` / `ASSERT_FLOAT_EQ(a,b)`
-
-Asserts float results are approximately equal within 4 ULPs.
-
-### `EXPECT_DOUBLE_EQ(a,b)` / `ASSERT_DOUBLE_EQ(a,b)`
-
-Asserts double results are approximately equal within 4 ULPs.
-
-### `EXPECT_NEAR(a,b,abs_error)` / `ASSERT_NEAR(a,b,abs_error)`
-
-Asserts the difference between `a` and `b` does not exceed `abs_error`.
-
-Example:
-
-```cpp
-EXPECT_FLOAT_EQ(ComputePi(), 3.14159f);
-ASSERT_NEAR(CalculateValue(), expected, 0.001);
-```
-
-
----
-
-## Exception Assertions
-
-Require exceptions to be enabled in your build. You can test that code throws or does not throw exceptions.
-
-| Macro                | Description                         |
-|----------------------|-----------------------------------|
-| `EXPECT_THROW(stmt, exc_type)` / `ASSERT_THROW(stmt, exc_type)` | Assert that statement throws exception of type. |
-| `EXPECT_NO_THROW(stmt)` / `ASSERT_NO_THROW(stmt)` | Assert that statement throws no exception. |
-| `EXPECT_ANY_THROW(stmt)` / `ASSERT_ANY_THROW(stmt)` | Assert statement throws any exception. |
-
-Example:
-
-```cpp
-EXPECT_THROW(DoWork(), std::runtime_error);
-ASSERT_NO_THROW(Initialize());
-```
-
-
----
-
-## Predicate Assertions
-
-Use when you need to check complex conditions and want better diagnostic output than a simple `EXPECT_TRUE()`.
-
-### Basic Predicate Assertions
-
-Macros:
-
-- `EXPECT_PRED1(pred, val1)` ... `EXPECT_PRED5(pred, val1, val2, ..., val5)`
-- Corresponding `ASSERT_PRED*` variants
-
-`pred` is a function or functor returning `bool`. Arguments are printed on failure.
-
-Example:
-
-```cpp
-bool IsPositive(int x) { return x > 0; }
-EXPECT_PRED1(IsPositive, value);
-```
-
-If `pred` is overloaded, cast to the precise function pointer type.
-
-### Predicate Formatter Assertions
-
-Macros:
-
-- `EXPECT_PRED_FORMAT1(pred_func, val1)` ... `EXPECT_PRED_FORMAT5(pred_func, val1, ..., val5)`
-- Corresponding `ASSERT_PRED_FORMAT*`
-
-`pred_func` returns `testing::AssertionResult` and takes argument expressions as strings plus values, allowing customized failure messages.
-
-Example:
-
-```cpp
-testing::AssertionResult AssertMutuallyPrime(const char* a_expr,
-                                             const char* b_expr,
-                                             int a, int b) {
-  if (MutuallyPrime(a, b)) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << a_expr << " and " << b_expr
-         << " are not mutually prime.";
-}
-EXPECT_PRED_FORMAT2(AssertMutuallyPrime, x, y);
-```
-
----
-
-## Generalized Assertion: Matchers
-
-Use `EXPECT_THAT(value, matcher)` and `ASSERT_THAT(value, matcher)` to perform advanced matching with [GoogleMock matchers](../gmock/README.md).
-
-Example:
-
-```cpp
-EXPECT_THAT(str, StartsWith("Hello"));
-EXPECT_THAT(num, AllOf(Gt(0), Lt(10)));
-```
-
----
-
-## Windows HRESULT Assertions
-
-On Windows, verify HRESULT success or failure with helpful message formatting.
-
-- `EXPECT_HRESULT_SUCCEEDED(expr)` / `ASSERT_HRESULT_SUCCEEDED(expr)`
-- `EXPECT_HRESULT_FAILED(expr)` / `ASSERT_HRESULT_FAILED(expr)`
-
----
-
-## Skipping Test Execution
-
-Use `GTEST_SKIP()` to skip tests or entire fixtures at runtime with custom messages.
-
-```cpp
-TEST(SkipTest, Skips) {
-  GTEST_SKIP() << "Skipping test.";
-}
-
-class SkipFixture : public testing::Test {
- protected:
-  void SetUp() override {
-    GTEST_SKIP() << "Skipping all tests in this fixture.";
-  }
-};
-
-TEST_F(SkipFixture, TestWillNotRun) {
-  FAIL();  // Not reached
+TEST(MathTest, ApproximatelyEqual) {
+  EXPECT_FLOAT_EQ(3.14f, CalculatePiApprox());
+  EXPECT_NEAR(CalculatePiApprox(), 3.14159f, 0.0001f);
 }
 ```
 
----
-
-## Adding Traces to Assertions
-
-Use `SCOPED_TRACE(message)` or `testing::ScopedTrace` to append contextual traces to failure messages for easier debugging, especially in helper functions or loops.
-
-Example:
-
+### Exception Assertion Example
 ```cpp
-SCOPED_TRACE("Loop iteration " << i);
-EXPECT_EQ(DoSomething(i), expected);
-```
-
----
-
-## Propagating Fatal Failures
-
-Fatal assertions abort the current function only. To detect fatal failures in subroutines:
-
-- Use `ASSERT_NO_FATAL_FAILURE(statement)` / `EXPECT_NO_FATAL_FAILURE(statement)` to verify no fatal failure occurred in `statement`.
-- Use `testing::Test::HasFatalFailure()` to check if any fatal failure occurred so far.
-
-Example:
-
-```cpp
-void Subroutine() {
-  ASSERT_EQ(foo, bar);
-}
-
-TEST(FooTest, Bar) {
-  Subroutine();
-  if (testing::Test::HasFatalFailure()) return;  // Abort test if Subroutine failed
-  ...
+TEST(ExceptionTest, ThrowsExpected) {
+  EXPECT_THROW(MyFunctionThatThrows(), std::runtime_error);
+  EXPECT_NO_THROW(FunctionThatDoesNotThrow());
 }
 ```
 
----
-
-## Using Assertions Outside `TEST` Functions
-
-- Assertions that cause fatal failures (`ASSERT_*`, `FAIL()`) require void-returning contexts.
-
-- Use non-fatal assertions (`EXPECT_*`, `ADD_FAILURE`) in constructors and destructors.
-
-- To make fatal failures propagate through exceptions, add a failure listener that throws exceptions (advanced usage).
-
----
-
-## Teaching GoogleTest How to Print Your Values
-
-For custom types, GoogleTest prints values using `operator<<` or optionally:
-
-- Define a friend `void PrintTo(const T& value, std::ostream* os)` in the same namespace.
-- Define an `AbslStringify` overload.
-
-Example:
-
+### Predicate Assertion Example
 ```cpp
-class Point {
-  int x, y;
-  template <typename Sink>
-  friend void AbslStringify(Sink& sink, const Point& p) {
-    absl::Format(&sink, "(%d, %d)", p.x, p.y);
-  }
-  friend void PrintTo(const Point& p, std::ostream* os) {
-    *os << "(" << p.x << ", " << p.y << ")";
-  }
-};
-```
-
-Call `testing::PrintToString(value)` to print any value.
-
----
-
-## Regular Expression Syntax in Death Tests
-
-GoogleTest supports different regex dialects depending on platform:
-
-- RE2 syntax when built with Bazel + Abseil.
-- POSIX extended regex on most POSIX systems.
-- Simplified regex on Windows.
-
-Supported constructs include character classes, quantifiers (*, +, ?), anchors (^, $), and wildcards (.).
-
----
-
-## Summary
-
-This reference equips you with the knowledge to leverage assertions effectively in GoogleTest, customize diagnostics, and extend printing capabilities to fit your testing scenarios.
-
-For comprehensive understanding, also refer to the [Assertions Reference](reference/assertions.md), [GoogleTest Primer](primer.md), and related guides on [Writing Your First Test](guides/core_workflows/writing_first_test.md) and [Using Assertions Effectively](guides/core_workflows/using_assertions_effectively.md).
-
----
-
-## Example: Combining Assertion Types
-
-```cpp
-#include <gtest/gtest.h>
-
-// Basic condition
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-
-// String comparison
-TEST(NameTest, IsDefault) {
-  const char* name = GetName();
-  EXPECT_STREQ(name, "default") << "Name is incorrect.";
-}
-
-// Predicate assertion
-bool IsPositive(int x) { return x > 0; }
-TEST(CheckPositive, ValuePositive) {
+bool IsPositive(int n) { return n > 0; }
+TEST(PredicateTest, PositiveCheck) {
   EXPECT_PRED1(IsPositive, value);
 }
-
-// Exception assertion
-TEST(ExceptionTest, ThrowsRuntimeError) {
-  EXPECT_THROW(DoSomethingBad(), std::runtime_error);
-}
-
-// Floating-point comparison
-TEST(MathTest, ApproximatePi) {
-  EXPECT_NEAR(ComputePi(), 3.14159, 0.0001);
-}
-
-// Skip example
-TEST(SkipExample, SkipTest) {
-  GTEST_SKIP() << "Not supported on this platform.";
-  FAIL();  // Not executed
-}
 ```
+
+---
+
+## Troubleshooting
+
+- **Unexpected assertion failures**: Check that arguments are evaluated exactly once and have expected values.
+- **Compile errors on assertions**: Verify that arguments to macros match expected call signatures, especially for `ASSERT_*` fatal assertions.
+- **Incorrect string comparison results**: Use `EXPECT_STREQ` for C strings, not `EXPECT_EQ`.
+- **Flaky floating-point comparisons**: Use appropriate ULP-based or near comparison macros.
+- **Fatal assertion inside non-void function causes compile errors**: refactor to return void or use non-fatal assertions.
+
+
+## Related Documentation
+
+- [Assertions Reference](reference/assertions.md) for full list of assertion macros.
+- [Writing and Structuring Tests](guides/writing-and-structuring-tests/assertions-and-matchers.md) for guidance on idiomatic usage.
+- [Advanced Topics](docs/advanced.md#assertions) for predicate assertions and advanced usage.
+- [GoogleMock Integration](api-reference/mocking-actions-matchers/mock-objects-and-methods) for mixing assertions with mocks.
+
+---
+
+For the complete and latest API details and examples, refer to the official GoogleTest repository or online documentation.
